@startuml
skinparam classAttributeIconSize 0

class Article {
    - id : int
    - titre : string
    - contenu : text
    - createdAt : datetime
    - slug : string
    - estPublie : bool
}

class Categorie {
    - id : int
    - titre : string
    - slug : string
}

class Commentaire {
    - id : int
    - contenu : text
    - createdAt : datetime
}

class Auteur {
    - id : int
    - prenom : string
    - nom : string
    - pseudo : string
}

class Contact {
    - id : int
    - nom : string
    - prenom : string
    - email : string
    - createdAt : datetime
    - sujet : string
    - contenu : text
}

Article "0..*" -- "0..1" Categorie
Commentaire "1..*" -- "0..1" Auteur
Commentaire "0..*" -- "1..1" Article

@enduml